[package]
name = "MyFirstContract"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["staking"]
staking = []

